# phockup

./: .gitignore  Dockerfile  phockup.py  pyproject.toml  readme.md  snapcraft.yaml
.github/workflows/: deploy.yml  lint.yml  tests.yml
phockup/: __init__.py  phockup.py
phockup/internal/: phockup.py
tests/: test_date.py  test_exif.py  test_phockup.py
